<resources>
    <string name="app_name">CurrencyRates</string>
    <string name="currency_symbol_rub">RUB</string>
    <string name="currency_symbol_usd">USD</string>
    <string name="currency_symbol_eur">EUR</string>
    <string name="currency_symbol_gbp">GBP</string>
    <string name="currency_symbol_chf">CHF</string>
    <string name="currency_symbol_cny">CNY</string>
    <string name="currency_name_rub">Russian Ruble</string>
    <string name="currency_name_usd">United States Dollar</string>
    <string name="currency_name_eur">Euro</string>
    <string name="currency_name_gbp">British Pound Sterling</string>
    <string name="currency_name_chf">Swiss Franc</string>
    <string name="currency_name_cny">Chinese Yuan</string>
    <string name="loader_message">Loading latest exchange rates…</string>
    <string name="latest_update_message">Latest update %s</string>
    <string name="current_rate_message">1 %s = %s %s</string>
    <string name="error_message_no_internet">No Internet connection available.\nPlease, connect and try again</string>
    <string name="error_message_server_unavailable">Service is temporarily unavailable.\nPlease, try again later</string>
    <string name="error_message_loading_failed">Data loading failed.\nPlease, try again later</string>
    <string name="error_message_data_outdated">Attention! Exchange rates are outdated.\nPlease, connect to the network and load latest rates</string>
    <string name="button_refresh">Refresh</string>
</resources>